<resources>
    <string name="app_name">Foodie</string>
    <string name="register">Don\'t have an account? Sign up now</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="answer_1">Yes it needs internet to fetch the data of restaurants and their food items and also for placing order. So basically you cannot use the main features of the app if you are not connected to internet.</string>
    <string name="question_1">Q1 Does this app needs active internet?</string>
    <string name="question_2">Q2 How to add restaurant as favourite?</string>
    <string name="answer_2">You can simply add any restaurant as favourite by clicking on the heart (favourites) icon.</string>
    <string name="question_3">Q3 How to get food items list?</string>
    <string name="answer_3">You can get food items list of any restaurant by just clicking on any restaurant.</string>
    <string name="question_4">Q4  How do i get info about my order after checkout?</string>
    <string name="answer_4">You can track your order from the order history menu.</string>
    <string name="question_5">Q5 Can i use this app without login?</string>
    <string name="answer_5">No you can\'t, As we need user data to place orders and other activities..</string>
    <string name="question_6">Q6 How can i delete my account?</string>
    <string name="answer_6">You can simply log out from the app by clicking on log out menu on the app drawer.</string>
    <string name="no_history_available">No History Available</string>
    <string name="please_place_any_order_to_see_order_history">Please place any order to see order history</string>
    <string name="ordering_from_pind_tadka">Ordering From: Pind Tadka</string>
    <string name="place_order_rs_0">Place Order (Rs. 0)</string>
    <string name="proceed_to_cart">Proceed To Cart</string>
    <string name="choose_from_menu_listed_below">Choose from menu listed below</string>
    <string name="enter_your_registered_mobile_number_and_email_below">Enter your registered mobile number and email below:</string>
    <string name="email_address">Email Address</string>
    <string name="enter_your_otp_to_change_password_below">Enter your OTP to change password below:</string>
    <string name="register_yourself">Register Yourself</string>
    <string name="name_minimum_3_characters">Name (Minimum 3 Characters)</string>
    <string name="email">Email</string>
    <string name="mobile_number_10_digits">Mobile Number(10 digits)</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="new_password">New Password</string>
    <string name="next">Next</string>
    <string name="your_order_has_been_successfully_placed">Your order has been successfully placed</string>
    <string name="foodie">Foodie</string>
    <string name="hello">Hello</string>
    <string name="_10_person">10/Person</string>
    <string name="_4_5">4.5</string>
    <string name="search_restaurants">Search Restaurants</string>
    <string name="john_doe">John Doe</string>
    <string name="_91_8329382992">+91 8329382992</string>
    <string name="johndoe_gmail_com">johndoe@gmail.com</string>
    <string name="new_delhi">New Delhi</string>
    <string name="_1">1</string>
    <string name="hot_dog">Hot Dog</string>
    <string name="rs_100">Rs. 100</string>
    <string name="add">Add</string>
    <string name="pind_tadka">Pind Tadka</string>
    <string name="_21_8_2021">21/8/2021</string>
    <string name="home">Home</string>
    <string name="my_profile">My Profile</string>
    <string name="favourites">Favourites</string>
    <string name="order_history">Order History</string>
    <string name="faq">FAQ</string>
    <string name="log_out">Log Out</string>
    <string name="filter">Filter</string>
</resources>