<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:icon="@drawable/ic_action_home"
            android:title="@string/home" />
        <item
            android:id="@+id/profile"
            android:icon="@drawable/ic_action_profile"
            android:title="@string/my_profile" />
        <item
            android:id="@+id/favourites"
            android:icon="@drawable/ic_action_favourite"
            android:title="@string/favourites" />
        <item
            android:id="@+id/orderHistory"
            android:icon="@drawable/ic_action_order_history"
            android:title="@string/order_history" />
        <item
            android:id="@+id/faq"
            android:icon="@drawable/ic_action_faq"
            android:title="@string/faq" />
        <item
            android:id="@+id/logout"
            android:icon="@drawable/ic_action_logout"
            android:title="@string/log_out" />
    </group>
</menu>