<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="5dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="5dp">

        <TextView
            android:id="@+id/rowCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="5dp"
            android:text="@string/_1"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/itemName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="5dp"
            android:maxWidth="180dp"
            android:text="@string/hot_dog"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/itemPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/itemName"
            android:layout_marginStart="40dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/rs_100"
            android:textSize="15sp" />

        <Button
            android:id="@+id/btnAdd"
            android:layout_width="100dp"
            android:layout_height="29dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="5dp"
            android:background="#FF5722"
            android:text="@string/add"
            android:textColor="@color/white"
            android:textSize="15sp" />
    </RelativeLayout>

</androidx.cardview.widget.CardView>