<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FF9800"
    android:orientation="vertical"
    tools:context=".activity.Page1">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="61dp"
        android:layout_height="42dp"
        android:layout_marginTop="10dp"
        app:srcCompat="?attr/actionModeCloseDrawable" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="13dp"
        android:layout_toEndOf="@id/imageView2"
        android:text="@string/register_yourself"
        android:textColor="@color/black"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="@color/white"
        android:drawableStart="@drawable/ic_action_profile"
        android:drawablePadding="15dp"
        android:ems="10"
        android:hint="@string/name_minimum_3_characters"
        android:inputType="text"
        android:maxLength="15"
        android:maxLines="1"
        android:padding="10dp"
        android:textColorHint="#5A5954" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="@color/white"
        android:drawableStart="@drawable/ic_action_email"
        android:drawablePadding="15dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="text"
        android:maxLength="50"
        android:maxLines="1"
        android:padding="10dp"
        android:textColorHint="#5A5954" />

    <EditText
        android:id="@+id/mobile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="@color/white"
        android:drawableStart="@drawable/ic_action_phone"
        android:drawablePadding="15dp"
        android:ems="10"
        android:hint="@string/mobile_number_10_digits"
        android:inputType="number"
        android:maxLength="10"
        android:maxLines="1"
        android:padding="10dp"
        android:textColorHint="#5A5954" />

    <EditText
        android:id="@+id/delivery_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mobile"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="@color/white"
        android:drawableStart="@drawable/ic_action_address"
        android:drawablePadding="15dp"
        android:ems="10"
        android:hint="@string/delivery_address"
        android:inputType="text"
        android:maxLength="80"
        android:maxLines="1"
        android:padding="10dp"
        android:textColorHint="#5A5954" />

    <EditText
        android:id="@+id/create_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/delivery_address"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="@color/white"
        android:drawableStart="@drawable/ic_action_password"
        android:drawablePadding="15dp"
        android:ems="10"
        android:hint="@string/new_password"
        android:inputType="text"
        android:maxLength="10"
        android:maxLines="1"
        android:padding="10dp"
        android:textColorHint="#5A5954" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:layout_below="@+id/create_password"
        android:layout_marginStart="11dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="11dp"
        android:layout_marginBottom="11dp"
        android:background="#FF5722"
        android:text="@string/next"
        android:textColor="@color/white"
        android:textSize="20sp" />


</RelativeLayout>