<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FF5722">

    <ImageView
        android:id="@+id/user_image"
        android:layout_width="120dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:src="@drawable/user" />

    <TextView
        android:id="@+id/user_name"
        android:layout_width="match_parent"
        android:layout_height="34dp"
        android:layout_below="@+id/user_image"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:background="@color/white"
        android:text="@string/john_doe"
        android:textAlignment="center"
        android:textColor="#423E3E"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/user_phone"
        android:layout_width="match_parent"
        android:layout_height="34dp"
        android:layout_below="@+id/user_name"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:background="@color/white"
        android:paddingTop="4dp"
        android:text="@string/_91_8329382992"
        android:textAlignment="center"
        android:textColor="#423E3E"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/user_email"
        android:layout_width="match_parent"
        android:layout_height="34dp"
        android:layout_below="@+id/user_phone"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:background="@color/white"
        android:paddingTop="4dp"
        android:text="@string/johndoe_gmail_com"
        android:textAlignment="center"
        android:textColor="#423E3E"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/user_address"
        android:layout_width="match_parent"
        android:layout_height="34dp"
        android:layout_below="@+id/user_email"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:background="@color/white"
        android:paddingTop="4dp"
        android:text="@string/new_delhi"
        android:textAlignment="center"
        android:textColor="#423E3E"
        android:textSize="18sp" />


</RelativeLayout>