<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FF9800"
    android:orientation="vertical"
    tools:context=".activity.Page1">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="197dp"
        android:layout_height="125dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        app:srcCompat="@drawable/splash_icon" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:text="@string/enter_your_registered_mobile_number_and_email_below"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/mobile_number_10_digits"
        android:inputType="number"
        android:maxLength="10"
        android:maxLines="1"
        android:padding="10dp"
        android:textColorHint="#5A5954" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/phone"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/email_address"
        android:inputType="text"
        android:maxLength="60"
        android:maxLines="1"
        android:padding="10dp"
        android:textColorHint="#5A5954" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:layout_below="@+id/email"
        android:layout_marginStart="11dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="11dp"
        android:layout_marginBottom="11dp"
        android:background="#FF5722"
        android:text="Next"
        android:textColor="@color/white"
        android:textSize="20sp" />


</RelativeLayout>